--- a/src/components/cigo-layer/src/css/layer.css
+++ b/src/components/cigo-layer/src/css/layer.css
@@ -1,4 +1,16 @@
+* {
+	padding: 0px;
+	margin: 0px;
+}
+p {
+	margin: 0px;
+}
+
 .cigo-layer-item {
+	font-family: Avenir, Helvetica, Arial, sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	color: #2c3e50;
 	position: absolute;
 	left: 0px;
 	top: 0px;
