--- a/src/components/cigo-layer/src/css/layer.css
+++ b/src/components/cigo-layer/src/css/layer.css
@@ -11,7 +11,7 @@ p {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	color: #2c3e50;
-	position: absolute;
+	position: fixed;
 	left: 0px;
 	top: 0px;
 	z-index: 10000;
